--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,222 +1,276 @@
-html, body {
-	margin: 0px;
-	padding: 0px;
-	background: #FFFFFF;
+html,
+body {
+    margin: 0;
+    padding: 0;
+
+    background: #fff;
 }
+
 .containt {
-	width: 1024px;
-	margin: 0px 100px;
+    width: 1024px;
+    margin: 0 100px;
 }
+
 .top {
-	background: #dcd7d7;
-	width: 100%;
-	overflow: hidden;
-	padding-bottom: 40px;
+    overflow: hidden;
+
+    width: 100%;
+    padding-bottom: 40px;
+
+    background: #dcd7d7;
 }
 
 .nav {
-		border-radius: 10px;
-		width: 60%;
-		margin-left: 15px;
-    background-color: #333;
+    position: absolute;
+
     overflow: hidden;
-		position: absolute;
-		margin-top: -12px;
+
+    width: 60%;
+    margin-top: -12px;
+    margin-left: 15px;
+
+    border-radius: 10px;
+    background-color: #333;
 }
+
 .label {
-	background-color: #000;
-	width: 100px;
-	margin-left: 15px;
-	margin-top: 20px;
-	padding: 5px 10px;
-	border-top-left-radius: 20px;
-	border-top-right-radius: 5px;
-	color: #fff;
+    width: 100px;
+    margin-top: 20px;
+    margin-left: 15px;
+    padding: 5px 10px;
+
+    color: #fff;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 5px;
+    background-color: #000;
 }
+
 .label-right {
-	background-color: #000;
-	width: 100px;
-	float: right;
-	margin-right: 15px;
-	margin-top: 20px;
-	padding: 5px 10px;
-	border-top-left-radius: 20px;
-	border-top-right-radius: 5px;
-	color: #fff;
+    float: right;
+
+    width: 100px;
+    margin-top: 20px;
+    margin-right: 15px;
+    padding: 5px 10px;
+
+    color: #fff;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 5px;
+    background-color: #000;
 }
 
 #kiri {
-	width: 30%;
-	float: left;
-	margin-left: 100px;
+    float: left;
+
+    width: 30%;
+    margin-left: 100px;
 }
+
 #tengah {
-	width: 30%;
-	float: left;
-	margin-right: 15px;
-	overflow: hidden;
+    float: left;
+    overflow: hidden;
+
+    width: 30%;
+    margin-right: 15px;
 }
+
 #kanan {
-	float: right;
-	width: 30%;
+    float: right;
+
+    width: 30%;
 }
+
 
 
 /* untuk biu data */
+
 .bio {
-	padding: 10px 15px;
+    padding: 10px 15px;
 }
+
 .bio img {
-	width: 150px;
-	height: 150px;
-	border-radius: 50%;
-	margin-top: 20px;
-	margin-bottom: 20px;
-	float: left;
+    float: left;
+
+    width: 150px;
+    height: 150px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+
+    border-radius: 50%;
 }
+
 .tag {
-	border-bottom: 1px solid #000;
-	width: 100%;
-	margin-top: -9px;
-	background: #eae7e7;
-	padding: 15px 0px;
-	overflow: hidden;
-	border-top: 1px solid #000;
+    overflow: hidden;
+
+    width: 100%;
+    margin-top: -9px;
+    padding: 15px 0;
+
+    border-top: 1px solid #000;
+    border-bottom: 1px solid #000;
+    background: #eae7e7;
 }
+
 #bio {
-	float: left;
+    float: left;
 }
+
 
 /* Style the links inside the navigation bar */
+
 .nav a {
-    float: left;
-    display: block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
     font-size: 17px;
+
+    display: block;
+    float: left;
+
+    padding: 14px 16px;
+
+    text-align: center;
+    text-decoration: none;
+
+    color: #f2f2f2;
 }
+
 
 /* Change the color of links on hover */
+
 .nav a:hover {
-    background-color: #ddd;
     color: black;
+    background-color: #ddd;
 }
+
 
 /* Add an active class to highlight the current page */
+
 .active {
-    background-color: #4CAF50;
     color: white;
+    background-color: #4caf50;
 }
 
+
 /* Hide the link that should open and close the topnav on small screens */
+
 .nav .icon {
     display: none;
 }
 
+
 /* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
+
 @media screen and (max-width: 1300px) {
-	.containt {
-		width: 1140px;
-		margin: 0px 50px;
-	}
-	.title {
-		margin-left: 15px;
-	}
-	.nav {
-		width: 60%;
-	}
+    .containt {
+        width: 1140px;
+        margin: 0 50px;
+    }
+    .title {
+        margin-left: 15px;
+    }
+    .nav {
+        width: 60%;
+    }
 }
 
 @media screen and (min-width: 500px) {
-	.containt {
-		width: 100%;
-		margin: 0px;
-	}
-	.nav {
-		width: 100%;
-		margin-left: 0px;
-		border-radius: 0px;
-	}
-	.top {
-		margin-bottom: 0px;
-	}
-	.bio img {
-		margin: 0px 5%;
-	}
+    .containt {
+        width: 100%;
+        margin: 0;
+    }
+    .nav {
+        width: 100%;
+        margin-left: 0;
+
+        border-radius: 0;
+    }
+    .top {
+        margin-bottom: 0;
+    }
+    .bio img {
+        margin: 0 5%;
+    }
 }
+
 
 /* Untuk HP */
-@media screen and (max-width: 600px) {
-	.containt {
-		width: 100%;
-		margin: 0px;
-	}
-	.nav {
-		width: 100%;
-		margin-left: 0px;
-		border-radius: 0px;
-	}
-	.top {
-		margin-bottom: 0px;
-	}
-	.bio img {
-		margin: 0px 20%;
-	}
-  .nav a:not(:first-child) {display: none;}
-  .nav a.icon {
-    float: right;
-    display: block;
-  }
 
-	.tag {
-		border: none;
-	}
-	#kiri {
-		width: 100%;
-		margin-left: 10px;
-	}
-	#tengah {
-		width: 100%;
-		margin-top: 50px;
-		margin-left: 10px;
-	}
-	#kanan {
-		width: 100%;
-		float: left;
-		margin-top: 50px;
-		margin-left: 10px;
-	}
+@media screen and (max-width: 600px) {
+    .containt {
+        width: 100%;
+        margin: 0;
+    }
+    .nav {
+        width: 100%;
+        margin-left: 0;
+
+        border-radius: 0;
+    }
+    .top {
+        margin-bottom: 0;
+    }
+    .bio img {
+        margin: 0 20%;
+    }
+    .nav a:not(:first-child) {
+        display: none;
+    }
+    .nav a.icon {
+        display: block;
+        float: right;
+    }
+
+    .tag {
+        border: none;
+    }
+    #kiri {
+        width: 100%;
+        margin-left: 10px;
+    }
+    #tengah {
+        width: 100%;
+        margin-top: 50px;
+        margin-left: 10px;
+    }
+    #kanan {
+        float: left;
+
+        width: 100%;
+        margin-top: 50px;
+        margin-left: 10px;
+    }
 }
 
+
 /* Ubah menu HP */
+
 @media screen and (max-width: 1024px) {
-  .nav.responsive {position: absolute;}
-  .nav.responsive a.icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-	.top {
-		margin-bottom: 0px;
-	}
-	.bio {
-		width: 100%;
-		padding: 10px 0px;
-	}
-	.label {
-		margin-left: 0px;
-	}
-	.label-right {
-		margin-right: 0px;
-	}
-	.tag {
-		width: 100%;
-	}
-  .nav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
+    .nav.responsive {
+        position: absolute;
+    }
+    .nav.responsive a.icon {
+        position: absolute;
+        top: 0;
+        right: 0;
+    }
+    .top {
+        margin-bottom: 0;
+    }
+    .bio {
+        width: 100%;
+        padding: 10px 0;
+    }
+    .label {
+        margin-left: 0;
+    }
+    .label-right {
+        margin-right: 0;
+    }
+    .tag {
+        width: 100%;
+    }
+    .nav.responsive a {
+        display: block;
+        float: none;
+
+        text-align: left;
+    }
 }
