--- a/admin/src/css/style.css
+++ b/admin/src/css/style.css
@@ -2,8 +2,10 @@ html,
 body {
     margin: 0;
     padding: 0;
-
+    height: 100%;
     background: #fff;
+
+    position: relative;
 }
 
 .containt {
@@ -117,6 +119,44 @@ body {
 }
 
 
+.login {
+    overflow: hidden;
+    margin: 0px 10%;
+}
+
+#form_login {
+    padding: 20px 40%;
+    background: #0068ef;
+    width: inherit;
+}
+
+#form_login input {
+    width: 250px;
+    padding: 5px 3px;
+    margin: 5px 0px;
+    font-size: 18px;
+}
+
+#form_login h2 {
+    color: #fff;
+}
+
+#button {
+    color: #FFFFFF;
+    background: #333333;
+    border: none;
+    border-radius: 3px;
+}
+
+#footer {
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    padding: 0px;
+    font-size: 14px;
+    color: #b9b8b8;
+}
 
 /* Style the links inside the navigation bar */
 
@@ -243,6 +283,31 @@ body {
         width: 100%;
         margin-top: 50px;
         margin-left: 10px;
+    }
+    .login {
+        width: 100%;
+        margin: 0px;
+    }
+    #form_login {
+        margin: 0px;
+        overflow: hidden;
+        padding: 20px 0px;
+    }
+
+    #form_login h2 {
+        text-align: center;
+    }
+
+    #form_login input {
+        width: 89%;
+        border-radius: 3px;
+        border: none;
+        padding: 5px 8px;
+        margin: 5px 3%;
+    }
+
+    #form_login #button {
+        width: 93%;
     }
 }
 
