--- a/admin/src/css/style.css
+++ b/admin/src/css/style.css
@@ -1,19 +1,21 @@
-html,
-body {
+html,body
+{
+    position: relative;
+
     margin: 0;
     padding: 0;
-    height: 100%;
-    background: #fff;
 
-    position: relative;
+    background: #fff;
 }
 
-.containt {
+.containt
+{
     width: 1024px;
     margin: 0 100px;
 }
 
-.top {
+.top
+{
     overflow: hidden;
 
     width: 100%;
@@ -22,7 +24,8 @@ body {
     background: #dcd7d7;
 }
 
-.nav {
+.nav
+{
     position: absolute;
 
     overflow: hidden;
@@ -35,7 +38,8 @@ body {
     background-color: #333;
 }
 
-.label {
+.label
+{
     width: 100px;
     margin-top: 20px;
     margin-left: 15px;
@@ -47,7 +51,8 @@ body {
     background-color: #000;
 }
 
-.label-right {
+.label-right
+{
     float: right;
 
     width: 100px;
@@ -61,14 +66,16 @@ body {
     background-color: #000;
 }
 
-#kiri {
+#kiri
+{
     float: left;
 
     width: 30%;
     margin-left: 100px;
 }
 
-#tengah {
+#tengah
+{
     float: left;
     overflow: hidden;
 
@@ -76,22 +83,29 @@ body {
     margin-right: 15px;
 }
 
-#kanan {
+#kanan
+{
     float: right;
 
     width: 30%;
 }
 
+#fexp input {
+    padding: 5px 7px;
+    margin: 5px 2px;
+}
 
 
 
 /* untuk biu data */
 
-.bio {
+.bio
+{
     padding: 10px 15px;
 }
 
-.bio img {
+.bio img
+{
     float: left;
 
     width: 150px;
@@ -102,7 +116,8 @@ body {
     border-radius: 50%;
 }
 
-.tag {
+.tag
+{
     overflow: hidden;
 
     width: 100%;
@@ -114,53 +129,53 @@ body {
     background: #eae7e7;
 }
 
-#bio {
+#bio
+{
     float: left;
 }
 
 
-.login {
+.login
+{
     overflow: hidden;
-    margin: 0px 10%;
+    height: 500px;
+    margin: 0 10%;
 }
 
-#form_login {
-    padding: 20px 40%;
-    background: #0068ef;
+#form_login
+{
     width: inherit;
+    height: 100%;
+    padding: 10% 37%;
 }
 
-#form_login input {
-    width: 250px;
-    padding: 5px 3px;
-    margin: 5px 0px;
+#form_login input
+{
     font-size: 18px;
+
+    width: 250px;
+    margin: 5px 0;
+    padding: 5px 3px;
 }
 
-#form_login h2 {
+#form_login h2
+{
+    color: #000;
+}
+
+#button
+{
     color: #fff;
-}
-
-#button {
-    color: #FFFFFF;
-    background: #333333;
     border: none;
     border-radius: 3px;
+    background: #333;
 }
 
-#footer {
-    width: 100%;
-    text-align: center;
-    position: absolute;
-    bottom: 0;
-    padding: 0px;
-    font-size: 14px;
-    color: #b9b8b8;
-}
 
 /* Style the links inside the navigation bar */
 
-.nav a {
+.nav a
+{
     font-size: 17px;
 
     display: block;
@@ -178,7 +193,8 @@ body {
 
 /* Change the color of links on hover */
 
-.nav a:hover {
+.nav a:hover
+{
     color: black;
     background-color: #ddd;
 }
@@ -187,7 +203,8 @@ body {
 
 /* Add an active class to highlight the current page */
 
-.active {
+.active
+{
     color: white;
     background-color: #4caf50;
 }
@@ -196,7 +213,8 @@ body {
 
 /* Hide the link that should open and close the topnav on small screens */
 
-.nav .icon {
+.nav .icon
+{
     display: none;
 }
 
@@ -204,34 +222,43 @@ body {
 
 /* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
 
-@media screen and (max-width: 1300px) {
-    .containt {
+@media screen and (max-width: 1300px)
+{
+    .containt
+    {
         width: 1140px;
         margin: 0 50px;
     }
-    .title {
+    .title
+    {
         margin-left: 15px;
     }
-    .nav {
+    .nav
+    {
         width: 60%;
     }
 }
 
-@media screen and (min-width: 500px) {
-    .containt {
+@media screen and (min-width: 500px)
+{
+    .containt
+    {
         width: 100%;
         margin: 0;
     }
-    .nav {
+    .nav
+    {
         width: 100%;
         margin-left: 0;
 
         border-radius: 0;
     }
-    .top {
+    .top
+    {
         margin-bottom: 0;
     }
-    .bio img {
+    .bio img
+    {
         margin: 0 5%;
     }
 }
@@ -240,73 +267,91 @@ body {
 
 /* Untuk HP */
 
-@media screen and (max-width: 600px) {
-    .containt {
+@media screen and (max-width: 600px)
+{
+    .containt
+    {
         width: 100%;
         margin: 0;
     }
-    .nav {
+    .nav
+    {
         width: 100%;
         margin-left: 0;
 
         border-radius: 0;
     }
-    .top {
+    .top
+    {
         margin-bottom: 0;
     }
-    .bio img {
+    .bio img
+    {
         margin: 0 20%;
     }
-    .nav a:not(:first-child) {
+    .nav a:not(:first-child)
+    {
         display: none;
     }
-    .nav a.icon {
+    .nav a.icon
+    {
         display: block;
         float: right;
     }
 
-    .tag {
+    .tag
+    {
         border: none;
     }
-    #kiri {
+    #kiri
+    {
         width: 100%;
         margin-left: 10px;
     }
-    #tengah {
+    #tengah
+    {
         width: 100%;
         margin-top: 50px;
         margin-left: 10px;
     }
-    #kanan {
+    #kanan
+    {
         float: left;
 
         width: 100%;
         margin-top: 50px;
         margin-left: 10px;
     }
-    .login {
+    .login
+    {
         width: 100%;
-        margin: 0px;
+        margin: 0;
     }
-    #form_login {
-        margin: 0px;
+    #form_login
+    {
         overflow: hidden;
-        padding: 20px 0px;
+
+        margin: 0;
+        padding: 20px 0;
     }
 
-    #form_login h2 {
+    #form_login h2
+    {
         text-align: center;
     }
 
-    #form_login input {
+    #form_login input
+    {
         width: 89%;
-        border-radius: 3px;
-        border: none;
-        padding: 5px 8px;
         margin: 5px 3%;
+        padding: 5px 8px;
+
+        border: none;
+        border-radius: 3px;
     }
 
-    #form_login #button {
+    #form_login #button
+    {
         width: 93%;
     }
 }
@@ -315,32 +360,41 @@ body {
 
 /* Ubah menu HP */
 
-@media screen and (max-width: 1024px) {
-    .nav.responsive {
+@media screen and (max-width: 1024px)
+{
+    .nav.responsive
+    {
         position: absolute;
     }
-    .nav.responsive a.icon {
+    .nav.responsive a.icon
+    {
         position: absolute;
         top: 0;
         right: 0;
     }
-    .top {
+    .top
+    {
         margin-bottom: 0;
     }
-    .bio {
+    .bio
+    {
         width: 100%;
         padding: 10px 0;
     }
-    .label {
+    .label
+    {
         margin-left: 0;
     }
-    .label-right {
+    .label-right
+    {
         margin-right: 0;
     }
-    .tag {
+    .tag
+    {
         width: 100%;
     }
-    .nav.responsive a {
+    .nav.responsive a
+    {
         display: block;
         float: none;
 
