--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,25 +1,34 @@
-@font-face {
-    font-family: "hi melody";
-    src : url("../font/HiMelody-Regular.ttf");
+@font-face
+{
+    font-family: 'hi melody';
+
+    src: url('../font/HiMelody-Regular.ttf');
 }
 html,
-body {
+body
+{
+    position: relative;
+
+    width: 100%;
     margin: 0;
     padding: 0;
+
     background: #fff;
-    position: relative;
-    width: 100%;
 }
-.title {
+.title
+{
     font-family: hobo std;
+
     margin-left: 10px;
 }
-.containt {
+.containt
+{
     width: 1024px;
     margin: 0 100px;
 }
 
-.top {
+.top
+{
     overflow: hidden;
 
     width: 100%;
@@ -28,7 +37,8 @@ body {
     background: #dcd7d7;
 }
 
-.nav {
+.nav
+{
     position: absolute;
 
     overflow: hidden;
@@ -41,47 +51,57 @@ body {
     background-color: #333;
 }
 
-#main {
+#main
+{
     padding: 70px 15px;
 }
 
-.people img {
+.people img
+{
     width: 300px;
     height: 300px;
+
     border-radius: 50%;
 }
 
-#kiri .people h3 {
+#kiri .people h3
+{
+    margin-bottom: 0;
     margin-left: 50px;
-    margin-bottom: 0px;
 }
 
-#kiri .people h5 {
+#kiri .people h5
+{
+    margin-top: 0;
     margin-left: 75px;
-    margin-top: 0px;
 }
 
-#tengah .people h3 {
+#tengah .people h3
+{
+    margin-bottom: 0;
     margin-left: 35px;
-    margin-bottom: 0px;
 }
 
-#tengah .people h5 {
+#tengah .people h5
+{
+    margin-top: 0;
     margin-left: 75px;
-    margin-top: 0px;
 }
 
-#kanan .people h3 {
+#kanan .people h3
+{
+    margin-bottom: 0;
     margin-left: 12px;
-    margin-bottom: 0px;
 }
 
-#kanan .people h5 {
+#kanan .people h5
+{
+    margin-top: 0;
     margin-left: 80px;
-    margin-top: 0px;
 }
 
-.label {
+.label
+{
     width: 100px;
     margin-top: 20px;
     margin-left: 15px;
@@ -93,7 +113,8 @@ body {
     background-color: #000;
 }
 
-.label-right {
+.label-right
+{
     float: right;
 
     width: 100px;
@@ -107,14 +128,16 @@ body {
     background-color: #000;
 }
 
-#kiri {
+#kiri
+{
     float: left;
 
     width: 30%;
     margin-left: 100px;
 }
 
-#tengah {
+#tengah
+{
     float: left;
     overflow: hidden;
 
@@ -122,40 +145,51 @@ body {
     margin-right: 15px;
 }
 
-#kanan {
+#kanan
+{
     float: right;
 
     width: 30%;
 }
 
-#footer {
-    width: 100%;
-    text-align: center;
-    bottom: 0;
-    padding: 0px;
+#footer
+{
     font-size: 14px;
-    color: #b9b8b8;
+
+    bottom: 0;
+
+    width: 100%;
     margin-top: 20px;
+    padding: 0;
+
+    text-align: center;
+
+    color: #b9b8b8;
 }
-#exp {
-    padding: 0px 20px;
+#exp
+{
+    padding: 0 20px;
 }
-#exp h6 {
-    padding-top: 0px;
-    padding-bottom: 0px;
-    margin-top: 0px;
+#exp h6
+{
+    margin-top: 0;
+    padding-top: 0;
+    padding-bottom: 0;
 }
-#exp h4 {
-    margin: 0px;
+#exp h4
+{
+    margin: 0;
 }
 
 /* untuk biu data */
 
-.bio {
+.bio
+{
     padding: 10px 15px;
 }
 
-.bio img {
+.bio img
+{
     float: left;
 
     width: 150px;
@@ -166,7 +200,8 @@ body {
     border-radius: 50%;
 }
 
-.tag {
+.tag
+{
     overflow: hidden;
 
     width: 100%;
@@ -178,7 +213,8 @@ body {
     background: #eae7e7;
 }
 
-#bio {
+#bio
+{
     float: left;
 }
 
@@ -186,7 +222,8 @@ body {
 
 /* Style the links inside the navigation bar */
 
-.nav a {
+.nav a
+{
     font-size: 17px;
 
     display: block;
@@ -204,7 +241,8 @@ body {
 
 /* Change the color of links on hover */
 
-.nav a:hover {
+.nav a:hover
+{
     color: black;
     background-color: #ddd;
 }
@@ -213,7 +251,8 @@ body {
 
 /* Add an active class to highlight the current page */
 
-.active {
+.active
+{
     color: white;
     background-color: #4caf50;
 }
@@ -222,7 +261,8 @@ body {
 
 /* Hide the link that should open and close the topnav on small screens */
 
-.nav .icon {
+.nav .icon
+{
     display: none;
 }
 
@@ -230,34 +270,43 @@ body {
 
 /* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
 
-@media screen and (max-width: 1300px) {
-    .containt {
+@media screen and (max-width: 1300px)
+{
+    .containt
+    {
         width: 1140px;
         margin: 0 50px;
     }
-    .title {
+    .title
+    {
         margin-left: 15px;
     }
-    .nav {
+    .nav
+    {
         width: 60%;
     }
 }
 
-@media screen and (min-width: 500px) {
-    .containt {
+@media screen and (min-width: 500px)
+{
+    .containt
+    {
         width: 100%;
         margin: 0;
     }
-    .nav {
+    .nav
+    {
         width: 100%;
         margin-left: 0;
 
         border-radius: 0;
     }
-    .top {
+    .top
+    {
         margin-bottom: 0;
     }
-    .bio img {
+    .bio img
+    {
         margin: 0 5%;
     }
 }
@@ -266,44 +315,55 @@ body {
 
 /* Untuk HP */
 
-@media screen and (max-width: 600px) {
-    .containt {
+@media screen and (max-width: 600px)
+{
+    .containt
+    {
         width: 100%;
         margin: 0;
     }
-    .nav {
+    .nav
+    {
         width: 100%;
         margin-left: 0;
 
         border-radius: 0;
     }
-    .top {
+    .top
+    {
         margin-bottom: 0;
     }
-    .bio img {
+    .bio img
+    {
         margin: 0 20%;
     }
-    .nav a:not(:first-child) {
+    .nav a:not(:first-child)
+    {
         display: none;
     }
-    .nav a.icon {
+    .nav a.icon
+    {
         display: block;
         float: right;
     }
 
-    .tag {
+    .tag
+    {
         border: none;
     }
-    #kiri {
+    #kiri
+    {
         width: 100%;
         margin-left: 10px;
     }
-    #tengah {
+    #tengah
+    {
         width: 100%;
         margin-top: 50px;
         margin-left: 10px;
     }
-    #kanan {
+    #kanan
+    {
         float: left;
 
         width: 100%;
@@ -316,32 +376,41 @@ body {
 
 /* Ubah menu HP */
 
-@media screen and (max-width: 1024px) {
-    .nav.responsive {
+@media screen and (max-width: 1024px)
+{
+    .nav.responsive
+    {
         position: absolute;
     }
-    .nav.responsive a.icon {
+    .nav.responsive a.icon
+    {
         position: absolute;
         top: 0;
         right: 0;
     }
-    .top {
+    .top
+    {
         margin-bottom: 0;
     }
-    .bio {
+    .bio
+    {
         width: 100%;
         padding: 10px 0;
     }
-    .label {
+    .label
+    {
         margin-left: 0;
     }
-    .label-right {
+    .label-right
+    {
         margin-right: 0;
     }
-    .tag {
+    .tag
+    {
         width: 100%;
     }
-    .nav.responsive a {
+    .nav.responsive a
+    {
         display: block;
         float: none;
 
